[tool.poetry]
name = "livelog"
version = "1.0.1"
description = "File logger and live reader"
authors = ["PabloLec <pablo.lecolinet@gmail.com>"]
license = "GPL-3.0 License"
readme = "README.md"
homepage = "https://github.com/PabloLec/livelog"
repository = "https://github.com/PabloLec/livelog"
documentation = "https://github.com/PabloLec/livelog#readme"
keywords=["log", "logs", "logger", "reader", "utility", "console", "terminal", "livelog", "tui", "cui"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Environment :: Console",
        "Intended Audience :: Developers",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
    ]

[tool.poetry.dependencies]
python = "^3.7"
colorama = "0.4.6"
watchdog = "3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
